Fixed Small white Spaces when search nav mobile Disapear

--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -52,12 +52,10 @@ main{
 }
 
 .carritoTitle{
-  margin-top:20px;
     text-align: center;
     color:var(--fontColors);
     font-weight: bold;
     font-size:30px;
-    margin-top: 80px;
 }
 
 .carArticle{
@@ -326,6 +324,14 @@ input:focus, textarea:focus, select:focus{
     flex-direction: row;
     justify-content: center;
   }  
+
+  
+}
+
+@media(min-width:600px){
+  .carritoTitle{
+    margin-top: 80px;
+}
 }
 
 
