--- a/public/css/navBarMobile.css
+++ b/public/css/navBarMobile.css
@@ -30,6 +30,7 @@ section.searchBar-mobile{
     margin-top: 50px;
     background: radial-gradient(var(--azul-morado-claro), var(--azul-morado-oscuro));
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-sizing: border-box;
 }
 
 form.sbMobile{
@@ -37,6 +38,7 @@ form.sbMobile{
     height: 30px;
     display: flex;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 form.sbMobile input[type=text]{
@@ -50,6 +52,7 @@ form.sbMobile input[type=text]{
    min-width: 190px;
    background: var(--backgroundSections);
    color: var(--fontColors);
+   box-sizing: border-box;
 }
 
 form.sbMobile input[type=text]::placeholder{
@@ -69,10 +72,15 @@ form.sbMobile button{
    color: white;
    cursor: pointer;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   box-sizing: border-box;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
 form.sbMobile i{
   color: var(--blanco);
+  box-sizing: border-box;
 }
 
 form.sbMobile button:hover {
@@ -86,6 +94,7 @@ form.sbMobile::after {
    content: "";
    clear: both;
    display: table;
+   box-sizing: border-box;
 }
 
 /************************************
